# python-tutorial

./: .gitignore  Dockerfile  HelloPython.py  Jenkinsfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  simple_tests.py
games-anims/: parabola.py  scroll.py  transition_scroll.py
games-anims/alternate-reality-dungeon/: chamber_viewer.py  dungeon_srv.py
games-anims/barbara-jan/: AdultBarbaraJan.py  BarbaraJan.py  main.py
games-anims/board-game/: board.py  factories.py  game.py  globals.py
games-anims/color/: bitmap_color_change.py
games-anims/crawler/: crawler.py  game.py  ui.py
games-anims/demo-honda/: honda.py
games-anims/demo1/: cube.py  demo1.py
games-anims/demo2/: demo2.py
games-anims/demo3/: demo3.py
games-anims/fighting-game/: main.py
games-anims/international_pyrate/: drawer.py  player.py  pyrate.py
games-anims/intro/: intro.py
games-anims/lightpoint/: lightpoint.py  lightpoint2.py  lightpoint3.py
games-anims/loco-atari/: level_manager.py  loco.py
games-anims/opengl/: ogldemo.py
games-anims/platform-game/: board.py  factories.py  game.py  globals.py
games-anims/pycity/: start.py
games-anims/pydash/: cell.py  factory.py  game.py
games-anims/pymmings/: board.py  cell.py  constants.py  factory.py
music/: sine.py
platform-game/: game.py  lib.py  player.py
playwright/: google.py
playwright_test/: google.py  read.me.txt  selenium-easy1.py  the_internet.py
src/: cloud_fog.py  path.py
tests/: simple_tests.py  test_bw_requests.py  test_ryan_air.py  test_simple.py  test_webaut_requests.py
(+216 files in other folders)
